fixed folder structure

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
- "version": 2,
- "builds": [
-  {
-   "src": "main.py",
-   "use": "@vercel/python",
-   "config": { "includeFiles": ["dist/**"] }
-  }
- ],
- "routes": [
-  {
-   "src": "/(.*)",
-   "dest": "main.py"
-  }
- ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
