--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi>=0.124.0",
+    "fastapi>=0.115.0,<0.120.0",
+    "pydantic>=2.10.0",
+    "pydantic-core>=2.23.0",
     "openai-agents>=0.6.2",
     "python-dotenv>=1.2.1",
     "python-frontmatter>=1.1.0",
     "qdrant-client>=1.16.1",
     "uvicorn>=0.38.0",
     "google-generativeai>=0.8.3",
+    "starlette>=0.40.0,<0.45.0",
 ]
