--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic>=2.10.0",
     "pydantic-core>=2.23.0",
     "openai-agents>=0.6.2",
+    "openai>=1.10.0",
     "python-dotenv>=1.2.1",
     "python-frontmatter>=1.1.0",
     "qdrant-client>=1.16.1",
