fix 500 internal server error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,14 @@
+[project]
+name = "rag-bot"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
 requires-python = ">=3.12"
 
 dependencies = [
     "fastapi>=0.115.0,<0.120.0",
-    "pydantic>=2.12.0",      # 3.12 compatible latest
-    "pydantic-core>=2.24.0", # 3.12 compatible latest
+    "pydantic>=2.12.0",
+    "pydantic-core>=2.24.0",
     "openai-agents>=0.6.2",
     "openai>=1.10.0",
     "python-dotenv>=1.2.1",
