--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi>=0.115.0,<0.120.0
-pydantic>=2.10.0
-pydantic-core>=2.23.0
-openai-agents>=0.6.2
-openai>=1.10.0
-python-dotenv>=1.2.1
-python-frontmatter>=1.1.0
-qdrant-client>=1.16.1
-uvicorn>=0.38.0
-google-generativeai>=0.8.3
-starlette>=0.40.0,<0.45.0
+fastapi==0.111.0
+pydantic==2.8.2
+pydantic-core==2.20.1
+openai-agents==0.6.2
+openai==1.40.0
+python-dotenv==1.0.1
+python-frontmatter==1.1.0
+qdrant-client==1.11.1
+uvicorn==0.30.6
+google-generativeai==0.8.3
+starlette==0.40.0
